# financecrew

./: README.md  pyproject.toml
output/: report.md
src/financecrew/: crew.py  main.py
src/financecrew/config/: agents.yaml  tasks.yaml
