[project]
name = "financecrew"
version = "0.1.0"
description = "financecrew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.7.2"
]

[project.scripts]
financecrew = "financecrew.main:run"
run_crew = "financecrew.main:run"
train = "financecrew.main:train"
replay = "financecrew.main:replay"
test = "financecrew.main:test"
run_with_trigger = "financecrew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
